--- a/BackEnd/Dashboard_test/src/main/resources/application.yaml
+++ b/BackEnd/Dashboard_test/src/main/resources/application.yaml
@@ -1,2 +1,19 @@
 server:
   port: 8080
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/dashboard?useSSL=false&serverTimezone=UTC
+    username: dashboard
+    password: dashboard_pwd
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+
+app:
+  jwt:
+    secret: "CAMBIA_QUESTA_CHIAVE_LUNGA_RANDOM_BASE64_O_TESTO"
+    expirationSeconds: 3600
